--- a/src/vuenotes.tex
+++ b/src/vuenotes.tex
@@ -170,7 +170,7 @@
   identifierstyle=\color{black},
   sensitive=false,
   comment=[l]{//},
-  morecomments[s]{/*}{*/},
+  %morecomments[s]{/*}{*/},
   commentstyle=\color{purple}\ttfamily,
   stringstyle=\color{red}\ttfamily,
   morestring=[b]',
@@ -282,6 +282,11 @@ morestring=[b]",
 \listoftables
 %%\listofexamples
 \printindex
+
+\include{intro}
+
+\include{kitchen}
+
 
 
 
