--- a/src/vuenotes.tex
+++ b/src/vuenotes.tex
@@ -287,14 +287,25 @@ morestring=[b]",
 
 \include{component}
 
-\include{webpack}
+\include{reactivity}
 
-\include{vue-cli}
+\include{guideline}
 
 \include{kitchen}
 
+\include{vue-cli}
 
+\include{vue-router}
 
+\include{vuex}
+
+\include{webpack}
+
+\include{axios}
+
+\include{html5}
+
+\include{ecmascript}
 
 \end{document}
 
