--- a/src/vue-cli.tex
+++ b/src/vue-cli.tex
@@ -2,6 +2,8 @@
 
 \chapter{Overview}
 
+Vue-cli用于创建Vue.js项目的脚手架，其中脚手架默认依赖的项目中包括vue、vue-router、vue-loader、vue-style-loader、vue-template-compiler等。
+
 
 \begin{lstlisting}[language=bash]
 $ vue init webpack my-project
