--- a/src/axios.tex
+++ b/src/axios.tex
@@ -226,12 +226,16 @@ axios.all([getUserAccount(),getUserPermissions()])
 
 \chapter{Response}
 
-
+\begin{figure}[htbp]
+\centering
+\includegraphics[scale=0.5]{axios-response.png}
+\caption{Axios Response}
+\end{figure}
 
 \section{Response Schema}
 
 
-Axios请求的响应包含以下信息：
+Axios请求返回的响应包含的信息如下：
 
 
 
@@ -254,7 +258,14 @@ Axios请求的响应包含以下信息：
 }
 \end{lstlisting}
 
+
+\subsection{config}
+
 \subsection{data}
+
+\subsection{headers}
+
+\subsection{request}
 
 
 \subsection{status}
@@ -263,10 +274,11 @@ Axios请求的响应包含以下信息：
 \subsection{statusText}
 
 
-\subsection{headers}
+\subsection{\_\_proto\_\_}
 
 
-\subsection{config}
+
+
 
 
 
