--- a/src/component.tex
+++ b/src/component.tex
@@ -37,11 +37,15 @@ new Vue({
 
 
 
-Vue.js提供的单文件组件（文件扩展名为 .vue）为上述所有问题提供了解决方案，Vue.js 本身提供了配套工具（例如vue-cli）来开发单文件组件。
+Vue.js提供的单文件组件（文件扩展名为 .vue）为上述所有问题提供了解决方案，还可以使用 Webpack 或 Browserify 等构建工具。
 
-具体来说，每个.vue文件就是一个组件，同时还包含了组件之间的依赖关系，这样可以使用 Webpack 或 Browserify 等构建工具。
 
-Vue单文件组件集成了组件需要的样式（style）、模板（template）和脚本（script），支持完整的语法高亮、CommonJS模块以及组件化的CSS。例如，下面是一个文件名为 Hello.vue 的简单的单文件Vue组件实例：
+
+具体来说，每个.vue文件都可以是一个组件，同时还包含了组件之间的依赖关系，Vue.js 本身还提供了配套工具（例如vue-cli）来开发单文件组件。
+
+Vue单文件组件集成了组件需要的样式（style）、模板（template）和脚本（script），支持完整的语法高亮、CommonJS模块以及组件化的CSS。
+
+例如，下面是一个文件名为 Hello.vue 的简单的单文件Vue组件实例：
 
 \begin{lstlisting}[language=JavaScript]
 <template>
@@ -69,7 +73,31 @@ p {
 
 
 
-Vue的单文件组件支持使用预处理器来构建简洁和功能更丰富的组件，比如 Jade，Babel (with ES2015 modules)和 Stylus，而且实际上在单文件组件中还可以简单地使用 Buble，TypeScript，SCSS，PostCSS 或者其他任何能够帮助提高生产力的预处理器。
+Vue支持使用预处理器来构建简洁和功能更丰富的组件，比如 Jade，Babel (with ES2015 modules)和 Stylus，而且实际上在单文件组件中还可以简单地使用 Buble，TypeScript，SCSS，PostCSS 或者其他任何能够帮助提高生产力的预处理器。
+
+
+\begin{lstlisting}[language=JavaScript]
+<template>
+  <p>{{ greeting }} World!</p>
+</template>
+
+<script>
+module.exports = {
+   data: function () {
+       return {
+           greeting: 'Hello'
+       }
+   }
+}
+</script>
+
+<style scoped>
+p {
+   font-size: 2em;
+   text-align: center;
+}
+</style>
+\end{lstlisting}
 
 Vue单文件组件的组合可以实现一个完整的使用 .vue 组件、ES2015 和 热重载( hot-reloading ) 的Vue项目。例如，在Vue.js模板中结合Webpack可以加载多个模块，并且将多个模块打包成最终Vue应用。
 
