--- a/src/ecmascript.tex
+++ b/src/ecmascript.tex
@@ -2,107 +2,65 @@
 
 \chapter{Overview}
 
-JavaScript和JScript等都是ECMA-262（ECMAScript）标准的实现和扩展，虽然二者出于不同的目的，但是现在JavaScript和JScript都可以与ECMAScript相容，但是包含超出ECMAScript的功能。
 
-\begin{lstlisting}[language=JavaScript]
-<!DOCTYPE html>
-<html>
-    <head>
-    <title>Hello World</title>
-        <script type="text/javascript">
-        // 在浏览器视窗内直接显示
-        document.write("Hello, world!"); 
-        // 弹窗显示
-        alert("Hello, world!"); 
-        // 在控制台（console）里显示
-        console.log("Hello, world!");
-        </script>
-    </head>
-    <body>
-    <!-- HTML 内容 -->
-    </body>
-</html>
-\end{lstlisting}
-
-
-许多应用程序（特别是Web浏览器）都支持ECMAScript，而且浏览器中的ECMAScript实现（例如V8）添加了与DOM（文档对象模型）交互的接口，可以通过ECMAScript脚本改变网页的内容、结构和样式。
-
-\begin{compactitem}
-\item Firefox Gecko、SpiderMonkey和Rhino
-\item Chrome V8
-\item IE Trident
-\item Opera
-\item Konqeror KHTML
-\item  Safari KHTML
-\end{compactitem}
-
-
-在浏览器的地址栏中可以使用\texttt{javascript:}以交互方式运行JavaScript：
-
-\begin{lstlisting}[language=JavaScript]
-javascript:alert("Hello world!");
-\end{lstlisting}
-
-注意，和主流的JavaScript引擎都是每次运行时加载JavaScript代码并解析不同，V8是将所有JavaScript代码解析后才开始运行，其他引擎则是逐行解析（SpiderMonkey会将解析过的指令暂存来提高性能）。
-
-实际上，完整的JavaScript实现应该包含三个部分，分别是：
-
-\begin{compactenum}
-\item ECMAScript（语言核心）描述了该语言的语法和基本对象；
-\item DOM（文档对象模型）描述处理网页内容的方法和接口；
-\item BOM（浏览器对象模型）描述与浏览器进行交互的方法和接口。
-\end{compactenum}
-
-JavaScript引擎（例如V8）就是一个专门处理JavaScript脚本的虚拟机，一般会内置在Web浏览器中来提供操作浏览器的功能（例如网络、DOM、外部事件、HTML5视频、canvas和存储）。
-
-一个典型的Web浏览器有一个图形引擎和一个独立的JavaScript引擎，例如V8与WebKit被内置于Google Chrome中，这样JavaScript引擎能够被更方便的测试、重新生成或者在其他项目中使用。
+2015年6月发布的ECMAScript 6.0（简称ES6）是JavaScript语言的下一代标准，其目标是使得JavaScript语言可以用来编写复杂的大型应用程序的企业级开发语言。
 
 
 
-\section{Prototype}
+1996年11月，JavaScript的创造者Netscape公司，决定将JavaScript提交给国际标准化组织ECMA，希望这种语言能够成为国际标准。次年，ECMA发布262号标准文件（ECMA-262）的第一版，规定了浏览器脚本语言的标准，并将这种语言称为ECMAScript，这个版本就是1.0版。
+
+该标准从一开始就是针对JavaScript语言制定的，但是之所以不叫JavaScript，有两个原因。一是商标，Java是Sun公司的商标，根据授权协议，只有Netscape公司可以合法地使用JavaScript这个名字，且JavaScript本身也已经被Netscape公司注册为商标。二是想体现这门语言的制定者是ECMA，不是Netscape，这样有利于保证这门语言的开放性和中立性。
+
+因此，ECMAScript和JavaScript的关系是，前者是后者的规格，后者是前者的一种实现（另外的ECMAScript方言还有Jscript和ActionScript）。日常场合，这两个词是可以互换的。
+
+2011年，ECMAScript 5.1版发布后，就开始制定6.0版了。因此，”ES6”这个词的原意，就是指JavaScript语言的下一个版本。
+
+但是，因为这个版本引入的语法功能太多，而且制定过程当中，还有很多组织和个人不断提交新功能。事情很快就变得清楚了，不可能在一个版本里面包括所有将要引入的功能。常规的做法是先发布6.0版，过一段时间再发6.1版，然后是6.2版、6.3版等等。
+
+但是，标准的制定者不想这样做。他们想让标准的升级成为常规流程：任何人在任何时候，都可以向标准委员会提交新语法的提案，然后标准委员会每个月开一次会，评估这些提案是否可以接受，需要哪些改进。如果经过多次会议以后，一个提案足够成熟了，就可以正式进入标准了。这就是说，标准的版本升级成为了一个不断滚动的流程，每个月都会有变动。
+
+标准委员会最终决定，标准在每年的6月份正式发布一次，作为当年的正式版本。接下来的时间，就在这个版本的基础上做改动，直到下一年的6月份，草案就自然变成了新一年的版本。这样一来，就不需要以前的版本号了，只要用年份标记就可以了。
+
+ES6的第一个版本，就这样在2015年6月发布了，正式名称就是《ECMAScript 2015标准》（简称ES2015）。2016年6月，小幅修订的《ECMAScript 2016标准》（简称ES2016）如期发布，这个版本可以看作是ES6.1版，因为两者的差异非常小（只新增了数组实例的includes方法和指数运算符），基本上是同一个标准。根据计划，2017年6月将发布ES2017标准。
+
+因此，ES6既是一个历史名词，也是一个泛指，含义是5.1版以后的JavaScript的下一代标准，涵盖了ES2015、ES2016、ES2017等等，而ES2015则是正式名称，特指该年发布的正式版本的语言标准。“ES6”一般是指ES2015标准，但有时也是泛指“下一代JavaScript语言”。
+
+
+
+\section{History}
+
+ES6从开始制定到最后发布，整整用了15年。
+
+前面提到，ECMAScript 1.0是1997年发布的，接下来的两年，连续发布了ECMAScript 2.0（1998年6月）和ECMAScript 3.0（1999年12月）。3.0版是一个巨大的成功，在业界得到广泛支持，成为通行标准，奠定了JavaScript语言的基本语法，以后的版本完全继承。直到今天，初学者一开始学习JavaScript，其实就是在学3.0版的语法。
+
+2000年，ECMAScript 4.0开始酝酿。这个版本最后没有通过，但是它的大部分内容被ES6继承了。因此，ES6制定的起点其实是2000年。
+
+为什么ES4没有通过呢？因为这个版本太激进了，对ES3做了彻底升级，导致标准委员会的一些成员不愿意接受。ECMA的第39号技术专家委员会（Technical Committee 39，简称TC39）负责制订ECMAScript标准，成员包括Microsoft、Mozilla、Google等大公司。
+
+2007年10月，ECMAScript 4.0版草案发布，本来预计次年8月发布正式版本。但是，各方对于是否通过这个标准，发生了严重分歧。以Yahoo、Microsoft、Google为首的大公司，反对JavaScript的大幅升级，主张小幅改动；以JavaScript创造者Brendan Eich为首的Mozilla公司，则坚持当前的草案。
+
+2008年7月，由于对于下一个版本应该包括哪些功能，各方分歧太大，争论过于激烈，ECMA开会决定，中止ECMAScript 4.0的开发，将其中涉及现有功能改善的一小部分，发布为ECMAScript 3.1，而将其他激进的设想扩大范围，放入以后的版本，由于会议的气氛，该版本的项目代号起名为Harmony（和谐）。会后不久，ECMAScript 3.1就改名为ECMAScript 5。
+
+2009年12月，ECMAScript 5.0版正式发布。Harmony项目则一分为二，一些较为可行的设想定名为JavaScript.next继续开发，后来演变成ECMAScript 6；一些不是很成熟的设想，则被视为JavaScript.next.next，在更远的将来再考虑推出。TC39委员会的总体考虑是，ES5与ES3基本保持兼容，较大的语法修正和新功能加入，将由JavaScript.next完成。当时，JavaScript.next指的是ES6，第六版发布以后，就指ES7。TC39的判断是，ES5会在2013年的年中成为JavaScript开发的主流标准，并在此后五年中一直保持这个位置。
+
+2011年6月，ECMAscript 5.1版发布，并且成为ISO国际标准（ISO/IEC 16262:2011）。
+
+2013年3月，ECMAScript 6草案冻结，不再添加新功能。新的功能设想将被放到ECMAScript 7。
+
+2013年12月，ECMAScript 6草案发布。然后是12个月的讨论期，听取各方反馈。
+
+2015年6月，ECMAScript 6正式通过，成为国际标准。从2000年算起，这时已经过去了15年。
+
+
+
+
+
+\chapter{Prototype}
 
 ECMAScript方言（JavaScript和JScript等）都扩展了ECMAScript语言，或者标准库和相关API（例如W3C定义的DOM），不过这也这意味着以一种方言实现的程序不兼容于另一种方言的实现，除非程序使用了方言中的公共子集所具有的特性和API。
 
-JavaScript基于原型（Prototype）来支持面向对象，并且支持函数优先。例如，eval() 函数可以直接运行一个JavaScript函数。
 
 
-\begin{lstlisting}[language=JavaScript]
-eval("alert(\"Message\")");
-\end{lstlisting}
-
-JavaScript通过ECMAScript实现标准化，已经支持面向对象编程、命令式编程和函数式编程。
-
-JavaScript的语法可以操控文本、数组、日期以及正则表达式等，但是不支持I/O（例如网络、存储和图形等），不过这些都可以通过其宿主环境提供支持。
-
-JavaScript的事件驱动特性和异步I/O特性允许其被用来编写服务器端程序，而且Node.js的出现使得JavaScript可以运行在游戏、桌面和移动应用程序和开发和服务器环境中，不过最通用的JavaScript宿主环境仍然是Web浏览器，Web浏览器使用公共的API创建“宿主对象”以便于在JavaScript中支持DOM。
-
-JavaScript支持和C语言相似的结构化编程语法（例如if条件语句、while循环、switch语句、do-while循环等），但是作用域是一个例外——JavaScript只支持使用var关键字来定义变量的函数作用域。
-
-ECMAScript加入了let关键字来支持块级作用域，这样就意味着JavaScript可以既支持函数作用域又支持块级作用域。
-
-\begin{compactitem}
-\item JavaScript中的表达式和语句是不同的；
-\item JavaScript支持自动在语句末尾添加分号。
-\end{compactitem}
-
-和大部分动态类型的脚本语言类似，JavaScript的类型与值而不是与变量关联。例如，x变量可以为数值，随后又可被赋值为字符串，JavaScript提供了包括鸭子类型在内的方法来检测变量类型。
-
-在JavaScript中，如果一条语句运行不了，那么其后面的语言也无法运行，解决办法就是于使用try\{\}catch()\{\}︰
-
-\begin{lstlisting}[language=JavaScript]
-console.log("a");    //正确
-console.log("b");    //正确
-console.logg("c");   //这是错误的，并且到这里会停下来
-console.log("d");    //正确
-console.log("e");    //正确
-
-/*解决方案*/
-try{console.log("a");}catch(e){}    //正确
-try{console.log("b");}catch(e){}    //正确
-try{console.logg("c");}catch(e){}   //这是错误的，但是到这里不会停下来，而是跳过
-try{console.log("d");}catch(e){}    //正确
-try{console.log("e");}catch(e){}    //正确
-\end{lstlisting}
 
 
 
