--- a/src/guideline.tex
+++ b/src/guideline.tex
@@ -8,6 +8,7 @@
 
 \chapter{card}
 
+\section{card.vue}
 
 
 \begin{lstlisting}[language=JavaScript]
@@ -36,7 +37,7 @@
 </script>
 \end{lstlisting}
 
-\section{card\_header}
+\section{card\_header.vue}
 
 
 
@@ -88,7 +89,7 @@
 \end{lstlisting}
 
 
-\section{card\_neck}
+\section{card\_neck.vue}
 
 
 \begin{lstlisting}[language=JavaScript]
@@ -105,7 +106,7 @@
 \end{lstlisting}
 
 
-\section{card\_footer}
+\section{card\_footer.vue}
 
 
 \begin{lstlisting}[language=JavaScript]
@@ -350,122 +351,7 @@
 
 \chapter{table\_grid}
 
-\begin{lstlisting}[language=JavaScript]
-<template>
-  <section class="table-grid" :class="{ 'is-sortable': use_sort }">
-
-    <!-- table header -->
-    <header class="table-header" v-if="data_source.length > 0">
-      <span class="table-header-col" v-if="use_sort" style="width: 35px;"><span>排序</span></span>
-      <span class="table-header-col" v-for="col in cols"
-            :style="[getWidth(col.span), { 'text-align': col.align }]"><span v-html="col.col_title"></span></span>
-    </header>
-
-    <transition :name="page_transition" :mode="'out-in'">
-      <div class="table-body" v-if="data_source.length > 0" :key="transition_key">
-        <draggable :list="data_source" :options="{ disabled: !use_sort, animation: 150, handle: '.drag-handle' }"
-                   @end="doSort">
-          <slot></slot>
-        </draggable>
-      </div>
-    </transition>
-
-    <aside class="text-center" v-if="!data_source.length > 0">~ Empty ~</aside>
-
-  </section>
-</template>
-
-<style scoped lang="stylus">
-  @import '~styles/variables.styl';
-  .table-grid { position: relative; height: 100%; }
-  .table-header { position: absolute; top: 0; left: 0; right: 0; z-index: 100; display: flex; line-height: row_height_2_inner; white-space: nowrap; box-shadow: 0 1px 2px -1px rgba(0, 0, 0, .3); }
-  .table-header-col { background: #fff; padding: 0 8px; font-weight: bold; }
-  .table-header-col > span { display: block; transform: scale(.9); transform-origin: 0 100%; }
-  .table-body { height: 100%; padding-top: row_height_2_inner; overflow-y: auto; }
-  /* 类型 */
-  .row-action.blue { color: blue; }
-  .row-action.warning { color: warning; }
-  .row-action.danger { color: danger; }
-  .row-action.success { color: success; }
-</style>
-
-<script>
-  import color from 'styles/color.js';
-  export default {
-    props: {
-      data_source: [Array, Object],
-      active_index: Number,
-      use_delete: { type: Boolean, default: false },
-      use_sort: { type: Boolean, default: false },
-      page_num: Number,
-      transition_key: String
-    },
-    data () {
-      return {
-        color: color,
-        rows: [],
-        cols: [],
-        page_transition: 'slide-right'
-      };
-    },
-    watch: {
-      data_source: function () {
-        this.$nextTick(() => {
-          this.initTable();
-        });
-      },
-      page_num: function (new_page_num, old_page_num) {
-        this.page_transition = new_page_num >= old_page_num ? 'slide-right' : 'slide-left';
-      }
-    },
-    mounted: function () {
-      this.$nextTick(() => {
-        if (this.data_source.length > 0) {
-          this.initTable();
-        }
-      });
-    },
-    methods: {
-      initTable: function () {
-        var rows = [];
-        var closest_children = this.$children[0];
-        if (!closest_children || !closest_children.$slots.default) return;
-        closest_children.$slots.default.map((VNode) => {
-          if (VNode.child) rows.push(VNode.child);
-        });
-        var cols = [];
-        rows[0].$slots.default.map((VNode) => {
-          if (VNode.child) cols.push(VNode.child);
-        });
-        this.rows = rows;
-        this.cols = cols;
-      },
-      doSort: function (event) {
-        this.$emit('do-sort', this.data_source[event.newIndex || 0], event.newIndex || 0, event.oldIndex);
-      },
-      getWidth: function (span) {
-        if (!span) return { 'flex': 1 };
-        else if (typeof span === 'string') return { 'width': span };
-        else return { 'flex': span };
-      }
-    }
-  };
-</script>
-\end{lstlisting}
-
-
-\section{template}
-
-
-
-\section{style}
-
-
-
-\section{script}
-
-
-\chapter{table\_grid\_2}
+\section{table\_grid.vue}
 
 
 \begin{lstlisting}[language=JavaScript]
@@ -572,6 +458,124 @@
 \end{lstlisting}
 
 
+\subsection{template}
+
+
+
+\subsection{style}
+
+
+
+\subsection{script}
+
+
+\section{table\_grid\_2.vue}
+
+
+\begin{lstlisting}[language=JavaScript]
+<template>
+  <section class="table-grid" :class="{ 'is-sortable': use_sort }">
+
+    <!-- table header -->
+    <header class="table-header" v-if="data_source.length > 0">
+      <span class="table-header-col" v-if="use_sort" style="width: 35px;"><span>排序</span></span>
+      <span class="table-header-col" v-for="col in cols"
+            :style="[getWidth(col.span), { 'text-align': col.align }]"><span v-html="col.col_title"></span></span>
+    </header>
+
+    <transition :name="page_transition" :mode="'out-in'">
+      <div class="table-body" v-if="data_source.length > 0" :key="transition_key">
+        <draggable :list="data_source" :options="{ disabled: !use_sort, animation: 150, handle: '.drag-handle' }"
+                   @end="doSort">
+          <slot></slot>
+        </draggable>
+      </div>
+    </transition>
+
+    <aside class="text-center" v-if="!data_source.length > 0">~ Empty ~</aside>
+
+  </section>
+</template>
+
+<style scoped lang="stylus">
+  @import '~styles/variables.styl';
+  .table-grid { position: relative; height: 100%; }
+  .table-header { position: absolute; top: 0; left: 0; right: 0; z-index: 100; display: flex; line-height: row_height_2_inner; white-space: nowrap; box-shadow: 0 1px 2px -1px rgba(0, 0, 0, .3); }
+  .table-header-col { background: #fff; padding: 0 8px; font-weight: bold; }
+  .table-header-col > span { display: block; transform: scale(.9); transform-origin: 0 100%; }
+  .table-body { height: 100%; padding-top: row_height_2_inner; overflow-y: auto; }
+  /* 类型 */
+  .row-action.blue { color: blue; }
+  .row-action.warning { color: warning; }
+  .row-action.danger { color: danger; }
+  .row-action.success { color: success; }
+</style>
+
+<script>
+  import color from 'styles/color.js';
+  export default {
+    props: {
+      data_source: [Array, Object],
+      active_index: Number,
+      use_delete: { type: Boolean, default: false },
+      use_sort: { type: Boolean, default: false },
+      page_num: Number,
+      transition_key: String
+    },
+    data () {
+      return {
+        color: color,
+        rows: [],
+        cols: [],
+        page_transition: 'slide-right'
+      };
+    },
+    watch: {
+      data_source: function () {
+        this.$nextTick(() => {
+          this.initTable();
+        });
+      },
+      page_num: function (new_page_num, old_page_num) {
+        this.page_transition = new_page_num >= old_page_num ? 'slide-right' : 'slide-left';
+      }
+    },
+    mounted: function () {
+      this.$nextTick(() => {
+        if (this.data_source.length > 0) {
+          this.initTable();
+        }
+      });
+    },
+    methods: {
+      initTable: function () {
+        var rows = [];
+        var closest_children = this.$children[0];
+        if (!closest_children || !closest_children.$slots.default) return;
+        closest_children.$slots.default.map((VNode) => {
+          if (VNode.child) rows.push(VNode.child);
+        });
+        var cols = [];
+        rows[0].$slots.default.map((VNode) => {
+          if (VNode.child) cols.push(VNode.child);
+        });
+        this.rows = rows;
+        this.cols = cols;
+      },
+      doSort: function (event) {
+        this.$emit('do-sort', this.data_source[event.newIndex || 0], event.newIndex || 0, event.oldIndex);
+      },
+      getWidth: function (span) {
+        if (!span) return { 'flex': 1 };
+        else if (typeof span === 'string') return { 'width': span };
+        else return { 'flex': span };
+      }
+    }
+  };
+</script>
+\end{lstlisting}
+
+
 
 \begin{lstlisting}[language=JavaScript]
 
@@ -584,7 +588,7 @@
 
 \end{lstlisting}
 
-\chapter{table\_grid\_row}
+\section{table\_grid\_row.vue}
 
 \begin{lstlisting}[language=JavaScript]
 <template>
@@ -617,7 +621,7 @@
 
 \end{lstlisting}
 
-\chapter{table\_grid\_col}
+\section{table\_grid\_col.vue}
 
 \begin{lstlisting}[language=JavaScript]
 <template>
@@ -654,10 +658,164 @@
 
 \end{lstlisting}
 
+\chapter{paper}
+
+
+\section{paper.vue}
+
+
 
 
 
 \begin{lstlisting}[language=JavaScript]
+<template>
+  <section class="paper">
+
+    <!-- 下层页链接 -->
+    <router-link class="under-paper shadow-deep"
+                 v-for="(under, index) in paper_stack"
+                 :to="under.route"
+                 :style="{ 'margin': '0 ' + (10 * (paper_stack.length - index)) + 'px -4px',
+                           'z-index': 1 * index }">{{ under.name }}
+    </router-link>
+
+    <!-- 顶层当前页 -->
+    <div class="top-paper shadow-deep">
+      <div class="paper-header-wrap">
+        <slot name="paper-header"></slot>
+      </div>
+      <slot></slot>
+
+      <transition name="fade">
+        <loading-cover v-show="self_is_loading_show"></loading-cover>
+      </transition>
+    </div>
+
+  </section>
+</template>
+
+<style scoped lang="stylus">
+  @import '~styles/variables.styl';
+  .paper { position: relative; width: 880px; }
+  .under-paper { position: relative; display: block; background: light_gray_2; color: gray_1; line-height: 28px; padding: 0 12px 2px; border-radius: 1px 1px 0 0; cursor: pointer; transition: all .2s ease; }
+  .under-paper:hover { transform: translateY(-3px) !important; }
+  .top-paper { position: relative; z-index: 100; min-height: 600px; background: light_gray_3; padding: 50px 40px; color: black; border-radius: 1px; }
+  .top-paper .paper-header-wrap { position: absolute; top: 0; left: 12px; right: 12px; padding: 6px 0 0; }
+</style>
+
+<script>
+  export default {
+    props: {
+      title: String,
+      is_root_paper: { type: Boolean, default: true },
+      is_loading_show: { type: Boolean, default: false }
+    },
+    data () {
+      return {
+        self_is_loading_show: this.is_loading_show
+      };
+    },
+    computed: {
+      paper_stack: function () {
+        return this.$store.state.paper_stack.filter((paper, index) => {
+          return index < this.$store.state.paper_stack.length - 1;
+        });
+      }
+    },
+    created () {
+      this.$root.$once('init-paper', (paper_title, paper_data) => {
+        this.handlePaperStack(paper_title, paper_data);
+        // setTimeout(() => {
+        this.self_is_loading_show = false;
+        this.$forceUpdate();
+        // }, 1000);
+      });
+      this.$root.$on('replace-paper', (paper_title, paper_data) => {
+        this.$store.dispatch('REPLACE_PAPERS', { name: paper_title, route: this.$route.fullPath, data: paper_data });
+      });
+    },
+    mounted: function () {
+      if (this.is_root_paper) {
+        this.$store.dispatch('CLEAR_PAPERS');
+      }
+    },
+    methods: {
+      handlePaperStack: function (paper_title, paper_data) {
+        // 一个页面只接受一次paper_stack压栈操作
+        var cur_path = '';
+        if (cur_path !== this.$route.fullPath) {
+          cur_path = this.$route.fullPath;
+          this.$nextTick(() => {
+            this.$store.dispatch('PUSH_PAPER', { name: paper_title, route: cur_path, data: paper_data });
+            // paper已经在栈内, 出栈到该paper
+            const PAPER_STACK = this.$store.state.paper_stack;
+            var new_paper = PAPER_STACK[PAPER_STACK.length - 1];
+            PAPER_STACK.map((paper, index) => {
+              if (index !== (PAPER_STACK.length - 1) && paper.route === new_paper.route) {
+                this.$store.dispatch('POP_PAPERS', index + 1);
+              }
+            });
+          });
+        }
+      }
+    }
+  };
+</script>
+
+\end{lstlisting}
+
+\section{paper\_header.vue}
+
+
+
+\begin{lstlisting}[language=JavaScript]
+<template>
+  <header class="paper-header">
+    <div class="paper-header-main">
+      <span class="paper-title">{{ title }}</span>
+      <span class="after-title"><slot name="after_title"></slot></span>
+    </div>
+    <aside class="card-header-actions">
+      <slot></slot>
+      <btn v-if="use_delete" :icon="'i-bin'" :mood="'danger'" @click.native="doDelete()"></btn>
+    </aside>
+  </header>
+</template>
+
+<style scoped lang="stylus">
+  @import "~styles/variables.styl";
+  .paper-header { line-height: 28px; height: 28px; border-bottom: 1px solid light_gray_1; }
+  .paper-header .paper-title { font-size: 14px; vertical-align: top; margin-right: 2px; }
+  .paper-header .after-title { display: inline-block; vertical-align: -3px; height: row_height_1; }
+  .card-header-actions { position: absolute; height: row_height_1; bottom: 3px; right: 0; }
+</style>
+
+<script>
+  export default {
+    props: {
+      use_delete: { type: Boolean, default: false }
+    },
+    data () {
+      return {
+        title: ''
+      };
+    },
+    created () {
+      this.$root.$once('init-paper', (paper_title) => {
+        this.title = paper_title;
+      });
+      this.$root.$on('replace-paper', (paper_title) => {
+        if (!paper_title) return;
+        this.title = paper_title;
+      });
+    },
+    methods: {
+      doDelete: function (row, index) {
+        this.$emit('do-delete', row, index);
+      }
+    }
+  };
+</script>
 
 \end{lstlisting}
 
@@ -667,15 +825,52 @@
 
 \end{lstlisting}
 
+\chapter{pagination}
+
+
+\section{pagination.vue}
 
 
 \begin{lstlisting}[language=JavaScript]
+<template>
+  <aside class="pagination" v-if="total > one_page_count">
+    <span class="action-to to-prev"
+          :class="{ 'disable': page_num == 1 }"
+          @click="$emit('to-page', page_num - 1)">
+      <icon :name="'i-arrow-left'" :color="'#666'"></icon></span>
+    {{ page_num }}
+    <span class="action-to to-next"
+          :class="{ 'disable': page_num >= total / one_page_count }"
+          @click="$emit('to-page', page_num + 1)">
+      <icon :name="'i-arrow-right'" :color="'#666'"></icon>
+    </span>
+  </aside>
+</template>
 
-\end{lstlisting}
+<style scoped lang="stylus">
+  @import "~styles/variables.styl";
+  .pagination { text-align: center; margin-top: 10px; }
+  .pagination .action-to { display: inline-block; background: #fff; height: row_height_2; line-height: row_height_2_inner; padding: 2px 8px; border-radius: 16px; color: gray_1; min-width: row_height_2; cursor: pointer; transition: all .1s; font-weight: bold; text-align: center; }
+  .pagination .action-to:hover { opacity: .6; }
+  .pagination .action-to .icon { width: 12px; height: 12px; vertical-align: -2px; }
+  .pagination .action-to .action-text { padding: 0 3px 0 6px; }
+  .pagination .action-to.disable { opacity: .2; pointer-events: none; }
+</style>
 
+<script>
+  export default {
+    props: {
+      page_num: { type: Number, default: 0 },
+      total: { type: Number, default: 1 }
+    },
+    data () {
+      return {
+        one_page_count: 12
+      };
+    }
+  };
+</script>
 
-
-\begin{lstlisting}[language=JavaScript]
 
 \end{lstlisting}
 
